src/SparqlParser.js
// Generated from Sparql.g4 by ANTLR 4.5.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var SparqlListener = require('./SparqlListener').SparqlListener;
var grammarFileName = "Sparql.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'BASE'", "'PREFIX'", "'SELECT'", "'DISTINCT'", 
                     "'REDUCED'", "'*'", "'CONSTRUCT'", "'DESCRIBE'", "'ASK'", 
                     "'FROM'", "'DATASET'", "'NAMED'", "'WHERE'", "'ORDER'", 
                     "'BY'", "'ASC'", "'DESC'", "'LIMIT'", "'OFFSET'", "'{'", 
                     "'.'", "'}'", "'OPTIONAL'", "'GRAPH'", "'UNION'", "'FILTER'", 
                     "'('", "','", "')'", "';'", "'a'", "'['", "']'", "'||'", 
                     "'&&'", "'='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'+'", "'-'", "'/'", "'!'", "'STR'", "'LANG'", "'LANGMATCHES'", 
                     "'DATATYPE'", "'BOUND'", "'sameTerm'", "'isIRI'", "'isURI'", 
                     "'isBLANK'", "'isLITERAL'", "'REGEX'", "'^^'", "'true'", 
                     "'false'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, "IRI_REF", "PNAME_NS", 
                      "PNAME_LN", "BLANK_NODE_LABEL", "VAR1", "VAR2", "LANGTAG", 
                      "INTEGER", "DECIMAL", "DOUBLE", "INTEGER_POSITIVE", 
                      "DECIMAL_POSITIVE", "DOUBLE_POSITIVE", "INTEGER_NEGATIVE", 
                      "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", "EXPONENT", 
                      "STRING_LITERAL1", "STRING_LITERAL2", "STRING_LITERAL_LONG1", 
                      "STRING_LITERAL_LONG2", "ECHAR", "NIL", "ANON", "PN_CHARS_U", 
                      "VARNAME", "PN_PREFIX", "PN_LOCAL", "WS" ];

var ruleNames =  [ "query", "prologue", "baseDecl", "prefixDecl", "selectQuery", 
                   "constructQuery", "describeQuery", "askQuery", "datasetClause", 
                   "defaultGraphClause", "anzoDatasetClause", "namedGraphClause", 
                   "sourceSelector", "whereClause", "solutionModifier", 
                   "limitOffsetClauses", "orderClause", "orderCondition", 
                   "limitClause", "offsetClause", "groupGraphPattern", "triplesBlock", 
                   "graphPatternNotTriples", "optionalGraphPattern", "graphGraphPattern", 
                   "groupOrUnionGraphPattern", "filter", "constraint", "functionCall", 
                   "argList", "constructTemplate", "constructTriples", "triplesSameSubject", 
                   "propertyListNotEmpty", "propertyList", "objectList", 
                   "object", "verb", "triplesNode", "blankNodePropertyList", 
                   "collection", "graphNode", "varOrTerm", "varOrIRIref", 
                   "var", "graphTerm", "expression", "conditionalOrExpression", 
                   "conditionalAndExpression", "valueLogical", "relationalExpression", 
                   "numericExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "primaryExpression", "brackettedExpression", 
                   "builtInCall", "regexExpression", "iriRefOrFunction", 
                   "rdfLiteral", "numericLiteral", "numericLiteralUnsigned", 
                   "numericLiteralPositive", "numericLiteralNegative", "booleanLiteral", 
                   "string", "iriRef", "prefixedName", "blankNode" ];

function SparqlParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

SparqlParser.prototype = Object.create(antlr4.Parser.prototype);
SparqlParser.prototype.constructor = SparqlParser;

Object.defineProperty(SparqlParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

SparqlParser.EOF = antlr4.Token.EOF;
SparqlParser.T__0 = 1;
SparqlParser.T__1 = 2;
SparqlParser.T__2 = 3;
SparqlParser.T__3 = 4;
SparqlParser.T__4 = 5;
SparqlParser.T__5 = 6;
SparqlParser.T__6 = 7;
SparqlParser.T__7 = 8;
SparqlParser.T__8 = 9;
SparqlParser.T__9 = 10;
SparqlParser.T__10 = 11;
SparqlParser.T__11 = 12;
SparqlParser.T__12 = 13;
SparqlParser.T__13 = 14;
SparqlParser.T__14 = 15;
SparqlParser.T__15 = 16;
SparqlParser.T__16 = 17;
SparqlParser.T__17 = 18;
SparqlParser.T__18 = 19;
SparqlParser.T__19 = 20;
SparqlParser.T__20 = 21;
SparqlParser.T__21 = 22;
SparqlParser.T__22 = 23;
SparqlParser.T__23 = 24;
SparqlParser.T__24 = 25;
SparqlParser.T__25 = 26;
SparqlParser.T__26 = 27;
SparqlParser.T__27 = 28;
SparqlParser.T__28 = 29;
SparqlParser.T__29 = 30;
SparqlParser.T__30 = 31;
SparqlParser.T__31 = 32;
SparqlParser.T__32 = 33;
SparqlParser.T__33 = 34;
SparqlParser.T__34 = 35;
SparqlParser.T__35 = 36;
SparqlParser.T__36 = 37;
SparqlParser.T__37 = 38;
SparqlParser.T__38 = 39;
SparqlParser.T__39 = 40;
SparqlParser.T__40 = 41;
SparqlParser.T__41 = 42;
SparqlParser.T__42 = 43;
SparqlParser.T__43 = 44;
SparqlParser.T__44 = 45;
SparqlParser.T__45 = 46;
SparqlParser.T__46 = 47;
SparqlParser.T__47 = 48;
SparqlParser.T__48 = 49;
SparqlParser.T__49 = 50;
SparqlParser.T__50 = 51;
SparqlParser.T__51 = 52;
SparqlParser.T__52 = 53;
SparqlParser.T__53 = 54;
SparqlParser.T__54 = 55;
SparqlParser.T__55 = 56;
SparqlParser.T__56 = 57;
SparqlParser.T__57 = 58;
SparqlParser.T__58 = 59;
SparqlParser.IRI_REF = 60;
SparqlParser.PNAME_NS = 61;
SparqlParser.PNAME_LN = 62;
SparqlParser.BLANK_NODE_LABEL = 63;
SparqlParser.VAR1 = 64;
SparqlParser.VAR2 = 65;
SparqlParser.LANGTAG = 66;
SparqlParser.INTEGER = 67;
SparqlParser.DECIMAL = 68;
SparqlParser.DOUBLE = 69;
SparqlParser.INTEGER_POSITIVE = 70;
SparqlParser.DECIMAL_POSITIVE = 71;
SparqlParser.DOUBLE_POSITIVE = 72;
SparqlParser.INTEGER_NEGATIVE = 73;
SparqlParser.DECIMAL_NEGATIVE = 74;
SparqlParser.DOUBLE_NEGATIVE = 75;
SparqlParser.EXPONENT = 76;
SparqlParser.STRING_LITERAL1 = 77;
SparqlParser.STRING_LITERAL2 = 78;
SparqlParser.STRING_LITERAL_LONG1 = 79;
SparqlParser.STRING_LITERAL_LONG2 = 80;
SparqlParser.ECHAR = 81;
SparqlParser.NIL = 82;
SparqlParser.ANON = 83;
SparqlParser.PN_CHARS_U = 84;
SparqlParser.VARNAME = 85;
SparqlParser.PN_PREFIX = 86;
SparqlParser.PN_LOCAL = 87;
SparqlParser.WS = 88;

SparqlParser.RULE_query = 0;
SparqlParser.RULE_prologue = 1;
SparqlParser.RULE_baseDecl = 2;
SparqlParser.RULE_prefixDecl = 3;
SparqlParser.RULE_selectQuery = 4;
SparqlParser.RULE_constructQuery = 5;
SparqlParser.RULE_describeQuery = 6;
SparqlParser.RULE_askQuery = 7;
SparqlParser.RULE_datasetClause = 8;
SparqlParser.RULE_defaultGraphClause = 9;
SparqlParser.RULE_anzoDatasetClause = 10;
SparqlParser.RULE_namedGraphClause = 11;
SparqlParser.RULE_sourceSelector = 12;
SparqlParser.RULE_whereClause = 13;
SparqlParser.RULE_solutionModifier = 14;
SparqlParser.RULE_limitOffsetClauses = 15;
SparqlParser.RULE_orderClause = 16;
SparqlParser.RULE_orderCondition = 17;
SparqlParser.RULE_limitClause = 18;
SparqlParser.RULE_offsetClause = 19;
SparqlParser.RULE_groupGraphPattern = 20;
SparqlParser.RULE_triplesBlock = 21;
SparqlParser.RULE_graphPatternNotTriples = 22;
SparqlParser.RULE_optionalGraphPattern = 23;
SparqlParser.RULE_graphGraphPattern = 24;
SparqlParser.RULE_groupOrUnionGraphPattern = 25;
SparqlParser.RULE_filter = 26;
SparqlParser.RULE_constraint = 27;
SparqlParser.RULE_functionCall = 28;
SparqlParser.RULE_argList = 29;
SparqlParser.RULE_constructTemplate = 30;
SparqlParser.RULE_constructTriples = 31;
SparqlParser.RULE_triplesSameSubject = 32;
SparqlParser.RULE_propertyListNotEmpty = 33;
SparqlParser.RULE_propertyList = 34;
SparqlParser.RULE_objectList = 35;
SparqlParser.RULE_object = 36;
SparqlParser.RULE_verb = 37;
SparqlParser.RULE_triplesNode = 38;
SparqlParser.RULE_blankNodePropertyList = 39;
SparqlParser.RULE_collection = 40;
SparqlParser.RULE_graphNode = 41;
SparqlParser.RULE_varOrTerm = 42;
SparqlParser.RULE_varOrIRIref = 43;
SparqlParser.RULE_var = 44;
SparqlParser.RULE_graphTerm = 45;
SparqlParser.RULE_expression = 46;
SparqlParser.RULE_conditionalOrExpression = 47;
SparqlParser.RULE_conditionalAndExpression = 48;
SparqlParser.RULE_valueLogical = 49;
SparqlParser.RULE_relationalExpression = 50;
SparqlParser.RULE_numericExpression = 51;
SparqlParser.RULE_additiveExpression = 52;
SparqlParser.RULE_multiplicativeExpression = 53;
SparqlParser.RULE_unaryExpression = 54;
SparqlParser.RULE_primaryExpression = 55;
SparqlParser.RULE_brackettedExpression = 56;
SparqlParser.RULE_builtInCall = 57;
SparqlParser.RULE_regexExpression = 58;
SparqlParser.RULE_iriRefOrFunction = 59;
SparqlParser.RULE_rdfLiteral = 60;
SparqlParser.RULE_numericLiteral = 61;
SparqlParser.RULE_numericLiteralUnsigned = 62;
SparqlParser.RULE_numericLiteralPositive = 63;
SparqlParser.RULE_numericLiteralNegative = 64;
SparqlParser.RULE_booleanLiteral = 65;
SparqlParser.RULE_string = 66;
SparqlParser.RULE_iriRef = 67;
SparqlParser.RULE_prefixedName = 68;
SparqlParser.RULE_blankNode = 69;

function QueryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SparqlParser.RULE_query;
    return this;
}

QueryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
QueryContext.prototype.constructor = QueryContext;

QueryContext.prototype.prologue = function() {
    return this.getTypedRuleContext(PrologueContext,0);
};

QueryContext.prototype.EOF = function() {
    return this.getToken(SparqlParser.EOF, 0);
};

QueryContext.prototype.selectQuery = function() {
    return this.getTypedRuleContext(SelectQueryContext,0);
};

QueryContext.prototype.constructQuery = function() {
    return this.getTypedRuleContext(ConstructQueryContext,0);
};

QueryContext.prototype.describeQuery = function() {
    return this.getTypedRuleContext(DescribeQueryContext,0);
};

QueryContext.prototype.askQuery = function() {
    return this.getTypedRuleContext(AskQueryContext,0);
};

QueryContext.prototype.enterRule = function(listener) {
    if(listener instanceof SparqlListener ) {
        listener.enterQuery(this);
	}
};

QueryContext.prototype.exitRule = function(listener) {
    if(listener instanceof SparqlListener ) {
        listener.exitQuery(this);
	}
};




SparqlParser.QueryContext = QueryContext;

SparqlParser.prototype.query = function() {

    var localctx = new QueryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, SparqlParser.RULE_query);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 140;
        this.prologue();
        this.state = 145;
        switch(this._input.LA(1)) {
        case SparqlParser.T__2:
            this.state = 141;
            this.selectQuery();
            break;
        case SparqlParser.T__6:
            this.state = 142;
            this.constructQuery();
            break;
        case SparqlParser.T__7:
            this.state = 143;
            this.describeQuery();
            break;
        case SparqlParser.T__8:
            this.state = 144;
            this.askQuery();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 147;
        this.match(SparqlParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PrologueContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SparqlParser.RULE_prologue;
    return this;
}

PrologueContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrologueContext.prototype.constructor = PrologueContext;

PrologueContext.prototype.baseDecl = function() {
    return this.getTypedRuleContext(BaseDeclContext,0);
};

PrologueContext.prototype.prefixDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PrefixDeclContext);
    } else {
        return this.getTypedRuleContext(PrefixDeclContext,i);
    }
};

PrologueContext.prototype.enterRule = function(listener) {
    if(listener instanceof SparqlListener ) {
        listener.enterPrologue(this);
	}
};

PrologueContext.prototype.exitRule = function(listener) {
    if(listener instanceof SparqlListener ) {
        listener.exitPrologue(this);
	}
};




SparqlParser.PrologueContext = PrologueContext;

SparqlParser.prototype.prologue = function() {

    var localctx = new PrologueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, SparqlParser.RULE_prologue);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 150;
        _la = this._input.LA(1);
        if(_la===SparqlParser.T__0) {
            this.state = 149;
            this.baseDecl();
        }

        this.state = 155;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===SparqlParser.T__1) {
            this.state = 152;
            this.prefixDecl();
            this.state = 157;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BaseDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SparqlParser.RULE_baseDecl;
    return this;
}

BaseDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BaseDeclContext.prototype.constructor = BaseDeclContext;

BaseDeclContext.prototype.IRI_REF = function() {
    return this.getToken(SparqlParser.IRI_REF, 0);
};

BaseDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof SparqlListener ) {
        listener.enterBaseDecl(this);
	}
};

BaseDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof SparqlListener ) {
        listener.exitBaseDecl(this);
	}
};




SparqlParser.BaseDeclContext = BaseDeclContext;

SparqlParser.prototype.baseDecl = function() {

    var localctx = new BaseDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, SparqlParser.RULE_baseDecl);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 158;
        this.match(SparqlParser.T__0);
        this.state = 159;
        this.match(SparqlParser.IRI_REF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PrefixDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SparqlParser.RULE_prefixDecl;
    return this;
}

PrefixDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrefixDeclContext.prototype.constructor = PrefixDeclContext;

PrefixDeclContext.prototype.PNAME_NS = function() {
    return this.getToken(SparqlParser.PNAME_NS, 0);
};

PrefixDeclContext.prototype.IRI_REF = function() {
    return this.getToken(SparqlParser.IRI_REF, 0);
};

PrefixDeclContext.prototype.enterRule = function(listener) {
    if(listener instanceof SparqlListener ) {
        listener.enterPrefixDecl(this);
	}
};

PrefixDeclContext.prototype.exitRule = function(listener) {
    if(listener instanceof SparqlListener ) {
        listener.exitPrefixDecl(this);
	}
};




SparqlParser.PrefixDeclContext = PrefixDeclContext;

SparqlParser.prototype.prefixDecl = function() {

    var localctx = new PrefixDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, SparqlParser.RULE_prefixDecl);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 161;
        this.match(SparqlParser.T__1);
        this.state = 162;
        this.match(SparqlParser.PNAME_NS);
        this.state = 163;
        this.match(SparqlParser.IRI_REF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SelectQueryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SparqlParser.RULE_selectQuery;
    return this;
}

SelectQueryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SelectQueryContext.prototype.constructor = SelectQueryContext;

SelectQueryContext.prototype.whereClause = function() {
    return this.getTypedRuleContext(WhereClauseContext,0);
};

SelectQueryContext.prototype.solutionModifier = function() {
    return this.getTypedRuleContext(SolutionModifierContext,0);
};

SelectQueryContext.prototype.datasetClause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DatasetClauseContext);
    } else {
        return this.getTypedRuleContext(DatasetClauseContext,i);
    }
};

SelectQueryContext.prototype.var = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VarContext);
    } else {
        return this.getTypedRuleContext(VarContext,i);
    }
};

SelectQueryContext.prototype.enterRule = function(listener) {
    if(listener instanceof SparqlListener ) {
        listener.enterSelectQuery(this);
	}
};

SelectQueryContext.prototype.exitRule = function(listener) {
    if(listener instanceof SparqlListener ) {
        listener.exitSelectQuery(this);
	}
};




SparqlParser.SelectQueryContext = SelectQueryContext;

SparqlParser.prototype.selectQuery = function() {

    var localctx = new SelectQueryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, SparqlParser.RULE_selectQuery);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 165;
        this.match(SparqlParser.T__2);
        this.state = 167;
        _la = this._input.LA(1);
        if(_la===SparqlParser.T__3 || _la===SparqlParser.T__4) {
            this.state = 166;
            _la = this._input.LA(1);
            if(!(_la===SparqlParser.T__3 || _la===SparqlParser.T__4)) {
            this._errHandler.recoverInline(this);
            }
            else {
                this.consume();
            }
        }
